Added new test h1

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         </div>
     </nav>
     <main>
+        <h1>Testowy nagłowek</h1>
         <article>
             <section id="section1" class="section1">
                 <h2>O MNIE</h2>
