--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="JS/script.js"></script>
     <link rel="stylesheet" href="css/style.css"> </link>
     <link rel="stylesheet" href="css/normalize.css">
+    <link rel="icon" href="images/icon.PNG">
 </head>
 
 <body style="background-color: #faf9f9;">
