Added button for background color change

--- a/index.html
+++ b/index.html
@@ -6,26 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Moja pierwsza strona</title>
     <meta property="og:image" content="images/share.png">
-    <script src="JS/script.js"></script>
-    <link rel="stylesheet" href="css/style.css"> </link>
+    <script defer src="JS/script.js"></script>
+    <link rel="stylesheet" href="css/style.css"></link>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="icon" href="images/icon.PNG">
 </head>
 
-<body style="background-color: #faf9f9;">
+<body class="background">
     <header class="header">
         <div class="header_text"> POZNAJ <br> MNIE! </div>
         <div class="logo_container">
             <img class="logo_image" src="images/Przechwytywanie.PNG" alt="Logo" />
         </div>
     </header> 
-    <button id="scroll-to-footer">Przewiń do stopki</button>
+  
 
     <nav>
         <div class="navbar">
             <a href="#section1">O MNIE</a>
             <a href="#section2">MOJE ZAINTERESOWANIA</a>
             <a href="#section3">INFORMACJE W PIGUŁCE</a>
+            <button class="button">WŁĄCZ <span class="themeName">CIEMNY</span> TRYB</button>
         </div>
     </nav>
     <main>
