--- a/index.html
+++ b/index.html
@@ -5,10 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Moja pierwsza strona</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Patrick+Hand+SC&display=swap"
+        rel="stylesheet">
     <meta property="og:image" content="images/share.png">
     <script defer src="JS/script.js"></script>
     <link rel="stylesheet" href="css/style.css"></link>
     <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/nav.css">
+    <link rel="stylesheet" href="css/article.css">
+
+    <link rel="stylesheet" href="css/footer.css">
     <link rel="icon" href="images/icon.PNG">
 </head>
 
@@ -18,8 +25,8 @@
         <div class="logo_container">
             <img class="logo_image" src="images/Przechwytywanie.PNG" alt="Logo" />
         </div>
-    </header> 
-  
+    </header>
+
 
     <nav>
         <div class="navbar">
@@ -30,10 +37,10 @@
         </div>
     </nav>
     <main>
- 
+
         <article>
             <section id="section1" class="section1">
-                <h2>O MNIE</h2>
+                <h2 class="section_title">O MNIE</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, neque unde. Ducimus inventore
                     vero veniam magni explicabo sapiente, possimus saepe earum debitis perspiciatis reiciendis quaerat a
                     consectetur reprehenderit blanditiis rem!Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -45,7 +52,7 @@
             </section>
 
             <section id="section2">
-                <h2>MOJE ZAINTERESOWANIA</h2>
+                <h2 class="section_title">MOJE ZAINTERESOWANIA</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, neque unde. Ducimus inventore
                     vero veniam magni explicabo sapiente, possimus saepe earum debitis perspiciatis reiciendis quaerat a
                     consectetur reprehenderit blanditiis rem!Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -57,7 +64,7 @@
             </section>
 
             <section id="section3">
-                <h2>INFORMACJE W PIGUŁCE</h2>
+                <h2 class="section_title">INFORMACJE W PIGUŁCE</h2>
                 <p>
                 <table class="table">
                     <tr>
@@ -105,18 +112,11 @@
                 </p>
             </section>
         </article>
-
-        <aside>
-            Jeśli masz ochotę zobaczyć jak wykonać kule kąpielowe samodzielnie kliknij w link poniżej.
-            <a rel="noreferrer noopener" target="_blank" href="https://ecospa.pl/receptury/kapiel"
-                title="Receptury DIY do kul kąpielowych"> Kulę kąpielowe DIY.</a>
-        </aside>
     </main>
 
-    <footer id="footer">
+    <footer class="footer">
         Informacje kontaktowe.
-        <br> Adres email: <a target="_blank" href="przykladowy.email123@gmail.com"> przykladowy.email123@gmail.com
-            ???????</a>
+        <br> Adres email: <a target="_blank" href="przykladowy.email123@gmail.com"> przykladowy.email123@gmail.com</a>
         <br> <a target="_blank" href="images/Przechwytywanie.PNG" download="Przechwytywanie.PNG"> Zobacz moje logo</a>
     </footer>
 </body>
