Added lines to article

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
         rel="stylesheet">
     <meta property="og:image" content="images/share.png">
     <script defer src="JS/script.js"></script>
-    <link rel="stylesheet" href="css/style.css"></link>
+    <link rel="stylesheet" href="css/style.css">
+    </link>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/nav.css">
     <link rel="stylesheet" href="css/article.css">
@@ -50,7 +51,7 @@
                     magni explicabo sapiente, possimus saepe earum debitis perspiciatis reiciendis quaerat a consectetur
                     reprehenderit blanditiis rem!</p>
             </section>
-
+            <hr class="hr">
             <section id="section2">
                 <h2 class="section_title">MOJE ZAINTERESOWANIA</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, neque unde. Ducimus inventore
@@ -62,7 +63,7 @@
                     magni explicabo sapiente, possimus saepe earum debitis perspiciatis reiciendis quaerat a consectetur
                     reprehenderit blanditiis rem!</p>
             </section>
-
+            <hr class="hr">
             <section id="section3">
                 <h2 class="section_title">INFORMACJE W PIGUŁCE</h2>
                 <p>
