Added more information to section1

--- a/index.html
+++ b/index.html
@@ -42,14 +42,32 @@
         <article>
             <section id="section1" class="section1">
                 <h2 class="section_title">O MNIE</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, neque unde. Ducimus inventore
-                    vero veniam magni explicabo sapiente, possimus saepe earum debitis perspiciatis reiciendis quaerat a
-                    consectetur reprehenderit blanditiis rem!Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Perspiciatis, neque unde. Ducimus inventore vero veniam magni explicabo sapiente, possimus saepe
-                    earum debitis perspiciatis reiciendis quaerat a consectetur reprehenderit blanditiis rem!Lorem ipsum
-                    dolor sit amet consectetur adipisicing elit. Perspiciatis, neque unde. Ducimus inventore vero veniam
-                    magni explicabo sapiente, possimus saepe earum debitis perspiciatis reiciendis quaerat a consectetur
-                    reprehenderit blanditiis rem!</p>
+                <p>Cześć, jestem Nikola!
+                <div class="section1_innerText">
+                    Przez ostatni rok miałam przyjemność pracować zdalnie, co pozwoliło mi na odkrycie nowych pasji i
+                    zainteresowań. Jednym z głównych celów, jakie postawiłam sobie w tym czasie, było nauczenie się
+                    programowania. Decyzja ta okazała się strzałem w dziesiątkę, a dodatkowy czas, jaki zyskałam
+                    pracując w trybie zdalnym, pozwolił mi zgłębić tę dziedzinę. </div>
+                <div class="section1_innerText">
+                    Poza programowaniem, uwielbiam zanurzać się w świat książek. Dwie moje gorące propozycje to
+                    <strong>"Atomowe nawyki" </strong>autorstwa James Clear oraz <strong>"Why Has Nobody Told Me This
+                        Before?"</strong> napisanej przez Julie Smith. Te dwie pozycje zupełnie mnie porwały i z
+                    pewnością znajdą miejsce na Twojej półce.
+                </div>
+                <div class="section1_innerText">
+                    Dodatkowo, kocham projekty typu "zrób to sam". Tworzenie rzeczy własnymi rękami to dla mnie nie
+                    tylko sposób na relaks, ale także inspirująca forma wyrazu. Kilka z moich ulubionych pomysłów to:
+                    <ul>
+                        <li>Kule kąpielowe</li>
+                        <li>Własnoręczne peeling</li>
+                    </ul>
+                </div>
+                <div class="section1_innerText">
+                    To tylko kilka z pomysłów, które sprawiły mi wiele radości. Mam nadzieję, że będziesz się cieszyć
+                    nimi
+                    tak samo jak ja!</div>
+
+                </p>
             </section>
             <hr class="hr">
             <section id="section2">
@@ -76,38 +94,113 @@
                     </tr>
                     <tr>
                         <th class="tableCell_main" scope="row"> #1</th>
-                        <td class="tableCell">Hopeless</td>
-                        <td class="tableCell"> Coleen Hoover</td>
-                        <td class="tableCell"> O czym jest książka</td>
+                        <td class="tableCell">James Clear</td>
+                        <td class="tableCell"> Atomowe nawyki. Drobne zmiany, niezwykłe efekty</td>
+                        <td class="tableCell"> Atomowe nawyki to prosta, sprawdzona metoda kształtowania dobrych nawyków
+                            i wyzbywania się złych manier.
+                            Fundamentem książki jest model nawyków składający się z czterech kroków (wskazówka,
+                            pragnienie, reakcja i nagroda) oraz czterech praw zmiany zachowania, które z tych kroków
+                            wynikają.
+                            Przedstawione przeze mnie założenia stanowią zintegrowany model bazujący na naukach
+                            kognitywnych i behawioralnych. Moim zdaniem jest to jeden z pierwszych modeli ludzkiego
+                            zachowania, który uwzględnia wpływ na nawyki zarówno bodźców zewnętrznych, jak i
+                            wewnętrznych emocji. Choć niektóre terminy mogą być ci znane, jestem przekonany, iż
+                            szczegóły – oraz zastosowanie czterech praw zmiany zachowania – wskażą ci nowe podejście do
+                            nawyków.</td>
                     </tr>
                     <tr>
                         <th class="tableCell_main" scope="row"> #2</th>
-                        <td class="tableCell"> jakaś inna książka</td>
-                        <td class="tableCell"> Autor</td>
-                        <td class="tableCell"> opis</td>
+                        <td class="tableCell"> Why Has Nobody Told Me This Before?</td>
+                        <td class="tableCell"> Smith Julie</td>
+                        <td class="tableCell"> Korzystając z wieloletniego doświadczenia jako psycholog kliniczny,
+                            doktor Julie Smith w swojej pierwszej książce prezentuje niezbędnik do natychmiastowego
+                            poprawienia stanu zdrowia psychicznego. Wypełniona tajemnicami z gabinetu terapeutycznego,
+                            „Dlaczego Nikt Mi Tego Wcześniej Nie Powiedział?” oferuje prostą radę, skuteczne strategie i
+                            potężne techniki radzenia sobie, które pomogą czytelnikom zachować pozytywne nastawienie i
+                            odporność, niezależnie od tego, co życie przyniesie. Napisana w krótkich, łatwo strawnych
+                            fragmentach, w ciepłym i nieformalnym stylu dr Julie, czytelnik może od razu przejść do
+                            odpowiedniej sekcji, w zależności od napotkanego wyzwania - i od razu znaleźć narzędzia
+                            pomocne w danej sytuacji. Od radzenia sobie z lękiem, radzenia sobie z krytyką czy walki z
+                            niskim nastrojem, po budowanie pewności siebie, znajdowanie motywacji czy nauczenie się
+                            przebaczać sobie, i wiele więcej, ta książka porusza codzienne problemy, które dotyczą nas
+                            wszystkich, oferując łatwe, praktyczne rozwiązania, które mogą naprawdę zmienić Twoje życie.
+                        </td>
                     </tr>
                     <tr>
                         <th class="tableCell_main" scope="col"> Projekty DIY</th>
                         <th class="tableCell_main" scope="col"> Produkt</th>
-                        <th class="tableCell_main" scope="col"> składniki</th>
+                        <th class="tableCell_main" scope="col"> Składniki</th>
                         <th class="tableCell_main" scope="col"> Przepis</th>
                     </tr>
                     <tr>
                         <th class="tableCell_main" scope="row" rowspan="2">Kule</th>
-                        <td class="tableCell">*****</td>
-                        <td class="tableCell">*****</td>
-                        <td class="tableCell">*****</td>
+                        <td class="tableCell">Musujące kule kąpielowe - nagietek i pomarańcza</td>
+                        <td class="tableCell">Wodorowęglan sodu, Kwas cytrynowy, Macerat nagietka lekarskiego
+                            ekologiczny, Olejek pomarańczowy, Szuszone kwiaty, Hydrolat oczarowy </td>
+                        <td class="tableCell">
+                            <strong>Krok 1 </strong>
+                            Przygotuj dużą miskę. Za pomocą wagi odważ kolejno w zlewce 250 ml wodorowęglan sodu i kwas
+                            cytrynowy. Przesyp do miski i dokładnie wymieszaj łyżką lub dłońmi.
+                            <br>
+                            <strong>Krok 2 </strong>
+                            W zlewce odważ płatki nagietka lekarskiego. Porcjami przesypuj susz do moździerza i
+                            rozcieraj nagietek tłuczkiem rozdrabniając go na mniejsze kawałki. Dodaj susz do pozostałych
+                            suchych składników i wymieszaj.
+                            <br>
+                            <strong>Krok 3 </strong>
+                            Na wadze do szklanej zlewki 50 ml odważ macerat nagietka lekarskiego i olejek pomarańczowy.
+                            Dodaj do sypkich składników i zacznij ugniatać masę dłońmi.
+                            <br>
+                            <strong>Krok 4 </strong>
+                            Spryskuj masę hydrolatem oczarowym i cały czas ugniataj dłonią do momentu, aż masa zacznie
+                            się lepić i przypominać konsystencję mokrego piasku.
+                            <br>
+                            <strong>Krok 5 </strong>
+                            Gdy masa jest gotowa, nałóż ją w dwie części foremki i lekko ubij. Połącz dwie części formy,
+                            (złóż półkule razem), ściśnij i przytrzymaj przez kilka sekund. Następnie, delikatnie otwórz
+                            formę (bez skręcania), wyjmij z niej kulę i przełóż na tacę lub na ręcznik papierowy. W
+                            podobny sposób, z pozostałej masy uformuj resztę kul. Gotowe kule przykryj ręcznikiem
+                            papierowym i zostaw do wyschnięcia na kilka godzin lub najlepiej do następnego dnia.
+                        </td>
                     </tr>
                     <tr>
-                        <td class="tableCell">*****</td>
-                        <td class="tableCell">*****</td>
-                        <td class="tableCell">*****</td>
+                        <td class="tableCell">Musujące kule kąpielowe - lawendowe pole</td>
+                        <td class="tableCell">Wodorowęglan sodu, Kwas cytrynowy, Olej z pestek winogron, Olejek
+                            lawendowy, Szuszone kwiaty, Hydrolat oczarowy </td>
+                        <td class="tableCell">Postępuj zgodnie z instrukcją jak przy kuli z nagietekiem i pomarańczą -
+                            zastąp tylko odpowiednio składniki.</td>
                     </tr>
                     <tr>
-                        <th class="tableCell_main" scope="row">Świece</th>
-                        <td class="tableCell">*****</td>
-                        <td class="tableCell">*****</td>
-                        <td class="tableCell">*****</td>
+                        <th class="tableCell_main" scope="row">Peelingi</th>
+                        <td class="tableCell">Peeling kwasami AHA 10% i BHA 2%</td>
+                        <td class="tableCell">Kwas salicylowy, Propanediol - glikol roślinny do rozpuszczania kwasów,
+                            Woda destylowana, Wieloowocowe kwasy AHA - Kompleks Multifruit</td>
+                        <td class="tableCell">
+                            <strong>Krok 1 </strong>
+                            W zlewce szklanej odważ kwas salicylowy, dodaj propanediol i zacznij mieszać. Rozpuszczenie
+                            kwasu w propanediolu trwa ok. 15 minut. Możesz również skorzystać z łaźni wodnej i lekko
+                            podgrzać roztwór przyśpieszając w ten sposób proces rozpuszczania.
+                            <br>
+                            <strong>Krok 2 </strong>
+                            Gdy podłużne kryształki kwasu rozpuszczą się całkowicie, dodaj wodę I wymieszaj. Dodaj
+                            Kompleks Multifruit i jeszcze raz wymieszaj.
+                            <br>
+                            <strong>Krok 3 </strong>
+                            Całość przelej do buteleczki, peeling jest gotowy do użycia.
+                            <br>
+                            <strong>Krok 4 </strong>
+                            Skórę przemyj kosmetykiem myjącym, a następnie lekko przetrzyj np. ręcznikiem. Peeling
+                            nanieś na skórę np. za pomocą wacika kosmetycznego lub pędzelka. W przypadku twarzy omijaj
+                            usta i oczy, a także znamiona barwnikowe. Jeśli kwasy dostaną się do oczu należy natychmiast
+                            przepłukać je obficie wodą! Jeśli masz skórę tłustą, przed peelingiem skórę można odtłuścić
+                            (np. przetrzeć roztworem alkoholowym), peeling możesz zostawić na twarzy na 4-8 minut. W
+                            przypadku skóry delikatnej, wrażliwej peeling nałóż tylko na 2-3 minuty.
+                            <br>
+                            <strong>Krok 5 </strong>
+                            Po upływie kilku minut peeling spłucz neutralizatorem. Spryskaj kosmetyczny płatek płynem
+                            neutralizującym i dobrze przetrzyj skórę. Po peelingu zaaplikuj krem, a na co dzień stosuj
+                            krem z wysokim filtrem UV.
+                        </td>
                     </tr>
                 </table>
                 </p>
