deleted one section

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Patrick+Hand+SC&display=swap"
         rel="stylesheet">
     <meta property="og:image" content="images/share.png">
-    <script defer src="JS/script.js"></script>
+    <script defer src="JS/button.js"></script>
     <link rel="stylesheet" href="css/style.css">
     </link>
     <link rel="stylesheet" href="css/normalize.css">
@@ -32,8 +32,7 @@
     <nav>
         <div class="navbar">
             <a href="#section1">O MNIE</a>
-            <a href="#section2">MOJE ZAINTERESOWANIA</a>
-            <a href="#section3">INFORMACJE W PIGUŁCE</a>
+            <a href="#section2">INFORMACJE W PIGUŁCE</a>
             <button class="button">WŁĄCZ <span class="themeName">CIEMNY</span> TRYB</button>
         </div>
     </nav>
@@ -69,20 +68,8 @@
 
                 </p>
             </section>
-            <hr class="hr">
+            <hr class="line">
             <section id="section2">
-                <h2 class="section_title">MOJE ZAINTERESOWANIA</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, neque unde. Ducimus inventore
-                    vero veniam magni explicabo sapiente, possimus saepe earum debitis perspiciatis reiciendis quaerat a
-                    consectetur reprehenderit blanditiis rem!Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Perspiciatis, neque unde. Ducimus inventore vero veniam magni explicabo sapiente, possimus saepe
-                    earum debitis perspiciatis reiciendis quaerat a consectetur reprehenderit blanditiis rem!Lorem ipsum
-                    dolor sit amet consectetur adipisicing elit. Perspiciatis, neque unde. Ducimus inventore vero veniam
-                    magni explicabo sapiente, possimus saepe earum debitis perspiciatis reiciendis quaerat a consectetur
-                    reprehenderit blanditiis rem!</p>
-            </section>
-            <hr class="hr">
-            <section id="section3">
                 <h2 class="section_title">INFORMACJE W PIGUŁCE</h2>
                 <p>
                 <table class="table">
@@ -209,9 +196,11 @@
     </main>
 
     <footer class="footer">
-        Informacje kontaktowe.
-        <br> Adres email: <a target="_blank" href="przykladowy.email123@gmail.com"> przykladowy.email123@gmail.com</a>
-        <br> <a target="_blank" href="images/Przechwytywanie.PNG" download="Przechwytywanie.PNG"> Zobacz moje logo</a>
+        <h1>Informacje kontaktowe</h1>
+        <ul class="footer_list">
+        <li>Adres email: <a target="_blank" href="przykladowy.email123@gmail.com"> przykladowy.email123@gmail.com</a> </li>
+        <li> <a target="_blank" href="images/Przechwytywanie.PNG" download="Przechwytywanie.PNG"> Zobacz moje logo</a> </li>
+        </ul>
     </footer>
 </body>
 
