--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         rel="stylesheet">
     <meta property="og:image" content="images/share.png">
     <script defer src="JS/button.js"></script>
+    <script defer src="JS/script.js"></script>
     <link rel="stylesheet" href="css/style.css">
     </link>
     <link rel="stylesheet" href="css/normalize.css">
